change config to ini. default invis armor stands to off (#11)